--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -8,5 +8,5 @@ actor: AcceptanceTester
 modules:
     enabled:
         - PhpBrowser:
-            url: http://localhost/myapp
+            url: https://www.google.ae/
         - \Helper\Acceptance
